--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Welcome to R's Circus.
-description: Stuff I did and do.
+description: Each virtue and each wisdom needs parading in one’s own time, and must not last forever.
