Update to hyde via remote-theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+remote-theme: fongandrew/hydeout
 title: Welcome to R's Circus.
 description: Each virtue and each wisdom needs parading in one’s own time, and must not last forever.
