--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic configuration
-remote-theme: fongandrew/hydeout
+remote-theme: poole/hyde
 title: R's Circus.
 description: Each virtue and each wisdom needs parading in one’s own time, and must not last forever.
 
