Revert "Switch to poole's version"
This reverts commit 8f1de80f1dade0db9ac5b6d12828ae08bb8bbe4b.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic configuration
-remote-theme: poole/hyde
+remote-theme: fongandrew/hydeout
 title: R's Circus.
 description: Each virtue and each wisdom needs parading in one’s own time, and must not last forever.
 author:
