Github complains about (Gem) theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic configuration
-theme: jekyll-theme-hydeout
+# theme: jekyll-theme-hydeout # Github will complain about this one
 remote-theme: fongandrew/hydeout
 
 title: Circus
