Update config to match gh-pages requirements for posts

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,23 @@ github:
 
 markdown: kramdown
 
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - Makefile
+  - README.md
+  - .gitignore
+
+permalink:        /:year/:month/:day/:title.html
+
+defaults:
+  - scope:
+      path: "_posts"
+      type: "posts"
+    values:
+      excerpt_separator: <!-- more -->
+      layout: post
+
 # Site config
 # paginate: 5
 
