--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 remote-theme: fongandrew/hydeout
 
 title: Circus
-tagline: '/dev/null'
+tagline: 'wordsmithing'
 description: 'Each virtue and each wisdom needs parading in one’s own time, and must not last forever.'
 #url: https://rscircus.github.io
 #baseurl: '/'
