--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 theme = 'PaperModded'
 baseURL = "https://rscircus.github.io"
 languageCode = "en-us"
-title = "R's Circus"
+title = "R's 🎩"
 pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
@@ -9,7 +9,7 @@ pygmentscodefencesguesssyntax = true
 [params]
 	mode="toggle"
 	useCDN=false
-	subtitle = "Wordsmithing on DIY hardware, Computer Science and Accessibility for the Deaf and Mathematics"
+	subtitle = "Fascinated by Computer Science, DIY hardware, and Accessibility for the Deaf and Mathematics"
 
   # Typography
   google_fonts = [
