--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ pygmentscodefencesguesssyntax = true
 
 [params]
 	mode="toggle"
- 	ShowReadingTime=true
+ 	ShowWordCount=true
   	ShowToc=true
 	useCDN=false
 	subtitle = "Fascinated by Computer Science, DIY hardware, and Accessibility for the Deaf and Mathematics"
