--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,7 @@ pygmentscodefencesguesssyntax = true
 [params]
 	mode="toggle"
  	ShowWordCount=true
+  	ShowShareButtons=true
   	ShowToc=true
 	useCDN=false
 	subtitle = "Fascinated by Computer Science, DIY hardware, and Accessibility for the Deaf and Mathematics"
