--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,8 @@ baseURL = "https://rscircus.github.io"
 languageCode = "en-us"
 title = "R's 🎩"
 pygmentsUseClasses = true
+enableInlineShortcodes = true
+enableRobotsTXT = true
 
 [params]
 mode="toggle"
@@ -51,18 +53,6 @@ name = "Tags"
 url = "/tags"
 weight = 5
 
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-#########
-# THEME
-#########
- 
-# name = "PaperMod"
-# license = "MIT"
-# licenselink = "https://github.com/adityatelange/hugo-PaperMod/blob/master/LICENSE"
-# description = "A fast, clean, responsive Hugo theme"
-# homepage = "https://adityatelange.github.io/hugo-PaperMod/"
 tags = [
   "responsive",
   "simple",
@@ -97,8 +87,8 @@ features = [
 min_version = "0.97.1"
 
 [author]
-  name = "Roland Siegbert"
-  homepage = "https://rscircus.github.io"
+name = "Roland Siegbert"
+homepage = "https://rscircus.github.io"
 
 [markup.goldmark.renderer]
-  unsafe = true
+unsafe = true
