--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ enableRobotsTXT = true
 
 [params]
 mode="toggle"
-defaultTheme="dark"
+defaultTheme="auto"
 ShowWordCount=true
 ShowToc=true
 ShowCodeCopyButtons=true
