--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 theme = 'PaperModded'
 baseURL = "https://rscircus.github.io"
 languageCode = "en-us"
-title = "R's 🎩"
+title = "R's 🎪"
 pygmentsUseClasses = true
 enableInlineShortcodes = true
 enableRobotsTXT = true
